# s_bert_for_ja

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: s_bert_train.ipynb
src/: evaluation.py  openai_embedding.py  train.py
tests/: test_train.py
tests/data/: test.tsv
